Button Alignment issue fix in purchase and sales

--- a/src/app/templates/modules/sales/components/salesorder/salesorder.component.scss
+++ b/src/app/templates/modules/sales/components/salesorder/salesorder.component.scss
@@ -121,7 +121,6 @@ select,input{
 
 #add-btn{
   width: 90px;
-  height: 30px;
   border: 1px solid #1186aa;
   background: $btn-bg;
   color:$h2-bg;
